--- a/tty.opam
+++ b/tty.opam
@@ -2,16 +2,17 @@
 opam-version: "2.0"
 synopsis: "A library for interacting with teletype and terminal emulators"
 description:
-  "TTY is a library for directly interacting with teletypes and terminal emulators"
+  "TTY is a library for directly interacting with teletypes and terminal emulators, including escape sequences, colors, and consuming stdin"
 maintainer: ["Leandro Ostera <leandro@abstractmachines.dev>"]
 authors: ["Leandro Ostera <leandro@abstractmachines.dev>"]
 license: "MIT"
-tags: ["terminal" "ansi" "tty" "teletype"]
+tags: ["terminal" "ansi" "tty" "teletype" "utf8"]
 homepage: "https://github.com/leostera/minttea"
 bug-reports: "https://github.com/leostera/minttea/issues"
 depends: [
   "ocaml" {>= "5.1"}
   "dune" {>= "3.11" & >= "3.11"}
+  "uutf" {>= "1.0.3"}
   "odoc" {with-doc}
 ]
 build: [
