--- a/minttea.opam
+++ b/minttea.opam
@@ -10,9 +10,10 @@ tags: ["tui" "terminal-ui" "framework" "riot"]
 homepage: "https://github.com/leostera/minttea"
 bug-reports: "https://github.com/leostera/minttea/issues"
 depends: [
+  "dune" {>= "3.11"}
   "ocaml" {>= "5.1"}
-  "dune" {>= "3.11" & >= "3.11"}
   "riot" {>= "0.0.5"}
+  "mdx" {with-test & >= "2.3.1"}
   "tty" {= version}
   "odoc" {with-doc}
 ]
