--- a/minttea.opam
+++ b/minttea.opam
@@ -14,7 +14,7 @@ depends: [
   "ocaml" {>= "5.1"}
   "riot" {>= "0.0.5"}
   "mdx" {with-test & >= "2.3.1"}
-  "tty" {= version}
+  "tty" {>= "0.0.2"}
   "odoc" {with-doc}
 ]
 build: [
