--- a/spices.opam
+++ b/spices.opam
@@ -14,6 +14,7 @@ bug-reports: "https://github.com/leostera/minttea/issues"
 depends: [
   "dune" {>= "3.11"}
   "ocaml" {>= "5.1"}
+  "colors" {>= "0.0.1"}
   "tty" {>= "0.0.2"}
   "odoc" {with-doc}
 ]
