--- a/leaves/dune
+++ b/leaves/dune
@@ -1,4 +1,4 @@
 (library
  (public_name leaves)
  (name leaves)
- (libraries spices ptime ptime.clock.os))
+ (libraries minttea spices ptime ptime.clock.os))
