--- a/spices.opam
+++ b/spices.opam
@@ -15,6 +15,7 @@ depends: [
   "dune" {>= "3.11"}
   "ocaml" {>= "5.1"}
   "colors" {>= "0.0.1"}
+  "mdx" {with-test & >= "2.3.1"}
   "tty" {>= "0.0.2"}
   "odoc" {with-doc}
 ]
