--- a/leaves/dune
+++ b/leaves/dune
@@ -4,4 +4,4 @@
 (library
  (public_name leaves)
  (name leaves)
- (libraries minttea spices ptime ptime.clock.os))
+ (libraries minttea spices ptime ptime.clock.os uuseg))
