--- a/minttea.opam
+++ b/minttea.opam
@@ -15,6 +15,7 @@ depends: [
   "riot" {>= "0.0.5"}
   "mdx" {with-test & >= "2.3.1"}
   "tty" {>= "0.0.2"}
+  "uuseg"
   "odoc" {with-doc}
 ]
 build: [
