feat(leaves): New list component.
The list can be filtered, and elements can be selected.

--- a/leaves/dune
+++ b/leaves/dune
@@ -4,4 +4,4 @@
 (library
  (public_name leaves)
  (name leaves)
- (libraries minttea spices ptime ptime.clock.os uuseg))
+ (libraries minttea spices ptime ptime.clock.os uuseg str))
