--- a/spices.opam
+++ b/spices.opam
@@ -17,6 +17,7 @@ depends: [
   "colors" {>= "0.0.1"}
   "mdx" {with-test & >= "2.3.1"}
   "tty" {>= "0.0.2"}
+  "uuseg"
   "odoc" {with-doc}
 ]
 build: [
